# ise-entrance-submission-project

./: .gitignore  pyproject.toml  requirements.txt  solar.ipynb  solarcalc.db
solarcalc/: calculations.py  database.py  test_views.py  views.py
solarcalc/static/: HDF_kW_10012345678_31-03-2025.csv
solarcalc/templates/: code_showcase.html  explanation.html  financial_projections.html  furtherdetails.html  index.html  layout.html  simulate_excess_energy.html  simulator.html
solarcalc/uploads/: krwm2n2y.csv
