[project]
name = "ise-entrance-submission-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "flask>=3.1.0",
    "hashids>=1.3.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pvlib>=0.12.0",
    "pytest>=8.3.5",
    "pytz>=2025.2",
    "requests>=2.32.3",
]
